--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div class="project-card">
                         <h3>ร้านแว่นแฮม</h3>
                         <div class="project-picture">
-                            <img src="image.png" alt="" width="500" height="200">
+                            <img src="image.png" alt="" >
                         </div>
                         <p>เว็บแสดงสถานะการจัดส่งสินค้าร้านแว่นแฮม</p>
                         <a href="https://surl.lu/mtkzwb">ดูรายละเอียด</a>
