--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#work">Work</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#more">More</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <div class="icon">
+                    <img src="Profile.jpg" alt="">
+                </div>
             </ul>
         </nav>
     </header>
