--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 <body>
     <header>
         <nav class="navbar">
-            <ul>
+            <ul>        
                 <li><a href="#home">Home</a></li>
                 <li><a href="#work">Work</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#Certificate">Certificate</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <div class="Resume">
+                    <a href="#" onclick="showPopup('Resume.png')">View Resume</a>
+                </div>
                 <div class="icon">
                     <img src="Profile.jpg" alt="">
                 </div>
@@ -30,7 +33,7 @@
                 <h1>Hello This My Portfolio</h1>
                 <p>I am eager to pursue a career as a Front-End Developer and am committed to continuous learning and
                     skill enhancement.</p>
-                <a href="#work" class="button">ผลงาน</a>
+                <a href="#work" class="button">Work</a>
             </div>
         </section>
 
