--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <h2>My Project</h2>
                 <div class="project-grid">
                     <div class="project-card">
-                        <h3>Waen Ham</h3>
+                        <h3>Shipping status Web</h3>
                         <div class="project-picture">
                             <img src="image.png" alt="" onclick="showPopup('image.png')" title="Detail">
                         </div>
