--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                 title="Detail">
                         </div>
                         <p>A web application for project management and services.</p>
-                        <a href="#">Reserved</a>
+                        <a href="#">Developing</a>
                     </div>
                 </div>
             </div>
